# django_aetos

./: .bumpversion.toml  .gitignore  .pre-commit-config.yaml  LICENSE.txt  Makefile  README.rst  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: test.yml
example_project/: .editorconfig  README.md  tests.py
example_project/example_app/: apps.py  models.py  signals.py  views.py
example_project/example_app/migrations/: 0001_initial.py
example_project/example_project/: settings.py  urls.py
src/django_aetos/: app_settings.py  apps.py  signals.py  urls.py  views.py
src/django_aetos/templates/metrics/: export.txt
